@@ -6,6 +6,8 @@ Revision history for Net-Statsd-Tiny
 
   - Minimum version is now Perl 5.8.
 
+  - Backported improvements from Net::Statsd::Lite v0.4.0.
+
 v0.2.1    2018-02-06 09:25:32+00:00 Europe/London
   [Tests]
   - Specified a minimum Test::TCP version.
